fix css alignment

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -306,3 +306,24 @@ nav {
     webkit-transition: opacity .3s ease-in-out;
     transition: opacity .3s ease-in-out;
 }
+
+.search-container {
+   border-radius: 10px; 
+   padding-top: 16px; 
+   box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%);background-color: #fff;
+}
+
+@media(max-width:767px) {
+    /*.search-container {
+        padding-top: 0;
+    }
+    .search-container .form-group {
+        margin-bottom: 0;
+    }*/
+    .search-container .mb-3 {
+        margin-bottom: 0 !important;
+    }
+    /*.search-container .btn {
+        margin-bottom: 0 !important;
+    }*/
+}
